--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 		<img src="./assets/logo-on-white-bg.png" alt="Logo" />
 
-		<script src="./src/app.js"></script>
+		<script src="./src/js/main.js"></script>
+		<script src="./src/js/util.js"></script>
 	</body>
 </html>
