sourcemaps working now for scss

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 		<img src="./assets/logo-on-white-bg.png" alt="Logo" />
 
-		<script src="./src/js/main.js"></script>
-		<script src="./src/js/util.js"></script>
+		<script src="./dist/index.bundle.js"></script>
 	</body>
 </html>
