--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,7 @@
 		<title>Webpack Mastery!</title>
 	</head>
 	<body>
+		<!-- sample comment -->
 		<h1>Webpack Mastery!</h1>
 
 		<img src=" ./assets/logo-on-white-bg.png" alt="Logo" />
