--- a/src/about.html
+++ b/src/about.html
@@ -7,7 +7,11 @@
 	</head>
 	<body>
 		<!-- sample comment -->
-		<h1>Webpack Mastery!</h1>
+		<h1>About Us!</h1>
+		<ul>
+			<li><a href="./index.html">Home</a></li>
+			<li><a href="./products.html">Projects</a></li>
+		</ul>
 
 		<img src=" ./assets/logo-on-white-bg.png" alt="Logo" />
 	</body>
