working on multiple html files

--- a/src/products.html
+++ b/src/products.html
@@ -6,12 +6,9 @@
 		<title>Webpack Mastery!</title>
 	</head>
 	<body>
-		<!-- sample comment -->
+		<header></header>
+
 		<h1>Projects!</h1>
-		<ul>
-			<li><a href="./index.html">Home</a></li>
-			<li><a href="./about.html">About Us</a></li>
-		</ul>
 
 		<img src=" ./assets/logo-on-white-bg.png" alt="Logo" />
 	</body>
