main html files are now in src only not in view

--- a/src/products.html
+++ b/src/products.html
@@ -8,9 +8,9 @@
 	<body>
 		<header></header>
 
-		<h1>About Us!</h1>
+		<h1>Projects!</h1>
 
-		<img src=" ../assets/logo-on-white-bg.png" alt="Logo" />
+		<img src=" ./assets/logo-on-white-bg.png" alt="Logo" />
 
 		<footer></footer>
 	</body>
